# owlang

./: .gitignore  .gitmodules  Makefile  TODO.md  concept.owl  concept_simplified.owl
bytecode/: example.irc
bytecode/lib/: cli.rb  compiler.rb  opcodes.rb
compiler/: Cargo.toml  example.irc  test.ir  test.irc  test.owl  test.owlc
compiler/lib/: compiler.rb  opcodes.rb
compiler/spec/: compiler_spec.rb  spec_helper.rb
compiler/src/: ast.rs  compiler.rs  lib.rs  main.rs  parser.rs
compiler/src/bytecode/: function.rs  instruction.rs  mod.rs  module.rs  opcodes.rs
compiler/tests/: bytecode_test.rs  parser_test.rs
stdlib/: code.owl  file.owl  function.owl  io.owl  list.owl  owl_unit.owl  owl_unit_runner.owl  path.owl  string.owl  tuple.owl  vm.owl
stdlib/.build/: something.owlc  tuple.owlc
test_cases/: arithmetic_test.owl  booleans_test.owl  control_flow_test.owl  equalities_test.owl  file_test.owl  functions_test.owl  gc_test.owl  lists_test.owl  locals_test.owl  path_test.owl  run  string_test.owl  tuples_test.owl  vectors_test.owl
test_cases/.build/: arithmetic_test.owlc  functions_test.owlc  tuples_test.owlc
vm/: CMakeLists.txt  Makefile  TODO.md  mccarthy.rb
vm/src/: alloc.c  alloc.h  list.c  list.h  main.c  opcodes.c  opcodes.h  owl.h  stack.c  stack.h  term.c  term.h  vector.c  vector.h  vm.c  vm.h  wat.c
vm/src/std/: owl_code.c  owl_code.h  owl_file.c  owl_file.h  owl_function.c  owl_function.h  owl_list.c  owl_list.h  owl_string.c  owl_string.h
vm/src/util/: file.c  file.h
